--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "sim-1",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3555",
+  "main": "./server/server.js",
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "massive": "^5.4.0",
+    "nodemon": "^1.18.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-router-dom": "^4.3.1",
